# Enprocess

./: .gitignore  CMakeLists.txt  README.md  host_config.json  host_config.yaml  remote_config.json  remote_config.yaml  test_host_config.json  test_host_config.yaml
common/: config.hpp
host/: main.cpp
remote/: main.cpp
test/: echo_server.py  setup_com_ports.py  test_bridge.py
